--- a/stream/templates/index.html
+++ b/stream/templates/index.html
@@ -1,9 +1,14 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>Sleeptight CCTV</title>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   </head>
   <body>
-    <h1>Video Streaming Demonstration</h1>
+    <h1>Sleeptight CCTV</h1>
     <img id="bg" src="{{ url_for('video_feed') }}">
+    <br>
+    <br>
+
+
   </body>
 </html>
